<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity.HomeActivity"
    android:paddingLeft="10dp"
    android:background="@color/backgroundLightGrayColor"
    tools:showIn="@layout/activity_home">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:autoStart="true"
                android:flipInterval="2000">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/kala"
                    app:riv_border_color="#FFF"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="10dp" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/enginnering_block"
                    app:riv_border_color="#FFF"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="10dp" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/pharmacy_block"
                    app:riv_border_color="#FFF"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="10dp" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/nurshing_block"
                    app:riv_border_color="#FFF"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="10dp" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/polytechnic_block"
                    app:riv_border_color="#FFF"
                    app:riv_border_width="0dp"
                    app:riv_corner_radius="10dp" />
            </ViewFlipper>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/semibold"
                android:text="Kalatarranga"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:text="College Fest"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textColor"
                android:textSize="16dp" />

            <!-- first layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- first menu -->
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="180dp"
                    android:layout_margin="3dp"
                    android:background="#FFF"
                    android:orientation="vertical"
                    android:id="@+id/menu_first"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/all_events" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/all_events"
                        android:textColor="@color/textColor"
                        android:textSize="16dp" />

                </LinearLayout>

                <!-- second menu -->
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="180dp"
                    android:layout_margin="3dp"
                    android:background="#FFF"
                    android:id="@+id/menu_second"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/event_scheduling" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/events_scheduling"
                        android:textColor="@color/textColor"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>

            <!-- second layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <!-- first menu -->
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="180dp"
                    android:layout_margin="3dp"
                    android:id="@+id/menu_third"
                    android:background="#FFF"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/event_registration" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/event_registeration"
                        android:textColor="@color/textColor"
                        android:textSize="16dp" />

                </LinearLayout>

                <!-- second menu -->
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="180dp"
                    android:layout_margin="3dp"
                    android:background="#FFF"
                    android:orientation="vertical"
                    android:id="@+id/menu_fourth"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/facebook" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/facebook"
                        android:textColor="@color/textColor"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>

            <!-- third layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <!-- first menu -->
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="180dp"
                    android:layout_margin="3dp"
                    android:background="#FFF"
                    android:orientation="vertical"
                    android:id="@+id/menu_fifth"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/youtube" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/youtube"
                        android:textColor="@color/textColor"
                        android:textSize="16dp" />

                </LinearLayout>

                <!-- second menu -->
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="180dp"
                    android:layout_margin="3dp"
                    android:background="#FFF"
                    android:orientation="vertical"
                    android:id="@+id/menu_sixth"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/developers" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/developer"
                        android:textColor="@color/textColor"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>